rsync changes since last release

  ENHANCEMENTS:

    * "make install-strip" works.  (Greg Louis)

    * With --progress, if we've finished transferring a file, show the
      time taken; otherwise show expected time to complete. (Cameron
      Simpson)

  BUG FIXES:

    * Fix test suite on Solaris.  (Jos Backus)

    * Fix minor memory leak in socket code.  (Dave Dykstra, Martin
      Pool.)

    * Fix --whole-file problem that caused it to be the default even
      for remote connections.  (Frank Schulz)